welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: illegal start of simple expression
  if (getY()==h)){
                ^